translation-tool/inputs/source_meta/objects/Service_Offerings_in_this_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Deal_Name__c</fullName>
        <formula>Service_Offerings__r.Embedded_Billing_Deal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Deal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <formula>text( Service_Offerings__r.Billing_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Transport__c</fullName>
        <description>What is the transport provided by this Hughes service?</description>
        <formula>Text( Service_Offerings__r.Circuit_Transport__c )</formula>
        <inlineHelpText>What is the transport provided by this Hughes service?</inlineHelpText>
        <label>Circuit Transport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Type__c</fullName>
        <description>Is this Hughes service a primary or backup circuit?</description>
        <formula>Text(Service_Offerings__r.Circuit_Type__c)</formula>
        <inlineHelpText>Is this Hughes service a primary or backup circuit?</inlineHelpText>
        <label>Circuit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Price1__c</fullName>
        <description>Contracted price for this service offering.</description>
        <formula>Service_Offerings__r.Contracted_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contracted price for this service offering.</inlineHelpText>
        <label>Contracted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Embedded_Billing_Deal_Name__c</fullName>
        <formula>Service_Offerings__r.Embedded_Billing_Deal_Name__c</formula>
        <label>Embedded Billing Deal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Description__c</fullName>
        <description>(Optional)  Customer-friendly description of any equipment included in service offering.</description>
        <formula>Service_Offerings__r.Equipment_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer-friendly description of any equipment included in service offering.</inlineHelpText>
        <label>Equipment Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment_Fee__c</fullName>
        <formula>if( Service_Offerings__r.Installment_Fee__c = True, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Fee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Bundle_Key__c</fullName>
        <formula>IF(Service_Offerings__r.Is_Bundle_Key__c=TRUE,&quot;True&quot;,&quot;False&quot;)</formula>
        <label>Is Bundle Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <description>Is this the default service offering for this plan?</description>
        <formula>IF(Service_Offerings__r.Is_Default__c=TRUE,&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this the default service offering for this plan?</inlineHelpText>
        <label>Is Default</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Service_Offering__c</fullName>
        <description>If False, there is no service offering (only a placeholder).</description>
        <formula>IF(Service_Offerings__r.Is_Service_Offering__c=TRUE,&quot;True&quot;,&quot;False&quot;)</formula>
        <inlineHelpText>If False, there is no service offering (only a placeholder).</inlineHelpText>
        <label>Is Service Offering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Time_Charge__c</fullName>
        <formula>Service_Offerings__r.Onetime_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Path_Plan__c</fullName>
        <formula>Plan__r.Path__c</formula>
        <label>Path (Plan)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path_SO__c</fullName>
        <formula>Service_Offerings__r.Path__c</formula>
        <label>Path (SO)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <formula>TEXT(Service_Offerings__r.Payment_Type__c)</formula>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_ID__c</fullName>
        <formula>Plan__r.Plan_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>Plan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <formula>TEXT(Plan__r.Plan_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Service Offerings in this Plan</relationshipLabel>
        <relationshipName>Service_Offerings_in_this_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <formula>TEXT(Service_Offerings__r.Program_Code__c)</formula>
        <label>Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Charge__c</fullName>
        <formula>Service_Offerings__r.Recurring_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SOIP_ID__c</fullName>
        <formula>Id</formula>
        <label>SOIP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_ID__c</fullName>
        <formula>Service_Offerings__r.SO_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Offering_Description__c</fullName>
        <description>(Optional) Customer-friendly description of service offering.</description>
        <formula>Service_Offerings__r.Service_Offering_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer-friendly description of service offering.</inlineHelpText>
        <label>Service Offering Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Offering_ID__c</fullName>
        <formula>Service_Offerings__r.Service_Offering_ID__c</formula>
        <label>Service Offering ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Offering_Is_Active__c</fullName>
        <formula>if( Service_Offerings__r.Is_Active__c = TRUE, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Offering Is Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Offering_Name__c</fullName>
        <formula>Service_Offerings__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Offering Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Offerings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order_Order Line Items_Service Offerings In This Plan.Serivce Offering Name</description>
        <label>Service Offerings</label>
        <referenceTo>Service_Offerings__c</referenceTo>
        <relationshipLabel>Service Offerings in this Plan</relationshipLabel>
        <relationshipName>Service_Offerings_in_this_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Term of service (in months).</description>
        <formula>Service_Offerings__r.Term__c</formula>
        <inlineHelpText>Term of service (in months).</inlineHelpText>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Offerings in this Plan</label>
    <nameField>
        <displayFormat>SOP-{000000}</displayFormat>
        <label>Service Offerings in this Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Offerings in this Plan</pluralLabel>
    <recordTypes>
        <fullName>FOSS</fullName>
        <active>true</active>
        <label>FOSS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>